tests/snapshots/run_wpt_conformance__trtx_gelu_float32_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gelu.https.any.js",
    "gelu float32 0D scalar",
    "trtx",
    "PASS",
)
